--- a/pinyougou-web/pinyougou-cart-web/src/main/webapp/order/getOrderInfo.html
+++ b/pinyougou-web/pinyougou-cart-web/src/main/webapp/order/getOrderInfo.html
@@ -15,7 +15,7 @@
 </head>
 <body ng-app="pinyougou"
 	  ng-controller="orderController"
-	  ng-init="findAddressByUser();loadUsername();findCart();">
+	  ng-init="findAddressByUser();loadUsername();findSelectedCart();">
 	<!--head-->
 	<div class="top">
 		<div class="py-container">
