--- a/pinyougou-web/pinyougou-cart-web/src/main/webapp/cart.html
+++ b/pinyougou-web/pinyougou-cart-web/src/main/webapp/cart.html
@@ -66,11 +66,11 @@
 			</div>
 		</div>
 		<!--All goods-->
-		<div class="allgoods">
+		<div class="allgoods"> {{selectedCarts}}
 			<h4>全部商品<b>{{totalEntity.totalItem}}</b></h4>
 			<div class="cart-main">
 				<div class="yui3-g cart-th">
-					<div class="yui3-u-1-4"><input type="checkbox" name="" value="" /> 全部</div>
+					<div class="yui3-u-1-4"><input type="checkbox"  ng-model="cartsSelected" ng-click="updateSelection($event)" /> 全部</div>
 					<div class="yui3-u-1-4">商品</div>
 					<div class="yui3-u-1-8">单价（元）</div>
 					<div class="yui3-u-1-8">数量</div>
@@ -80,14 +80,14 @@
 
 				<div class="cart-item-list" ng-repeat="cart in carts">
 					<div class="cart-shop">
-						<input type="checkbox" name="" value="" />
+						<input type="checkbox" ng-checked="isSellerChecked(cart.sellerId)" ng-click="updateSelection($event,cart.sellerId)"  name="" value="" />
 						<span class="shopname self">{{cart.sellerName}}</span>
 					</div>
 					<div class="cart-body">
 						<div class="cart-list" ng-repeat="orderItem in cart.orderItems">
 							<ul class="goods-list yui3-g">
 								<li class="yui3-u-1-24">
-									<input type="checkbox" name="" value="" />
+									<input type="checkbox" name="" ng-checked="isItemChecked(cart.sellerId,orderItem.itemId)" ng-click="updateSelection($event,cart.sellerId,orderItem.itemId)" />
 								</li>
 								<li class="yui3-u-11-24">
 									<div class="good-item">
@@ -129,11 +129,11 @@
 			</div>
 			<div class="cart-tool">
 				<div class="select-all">
-					<input type="checkbox" name="" value="" />
+					<input type="checkbox"  ng-model="cartsSelected" ng-click="updateSelection($event)" />
 					<span>全选</span>
 				</div>
 				<div class="option">
-					<a href="#none">删除选中的商品</a>
+					<a href="javacript:;" ng-click="deleteFromCart();">删除选中的商品</a>
 					<a href="#none">移到我的关注</a>
 					<a href="#none">清除下柜商品</a>
 				</div>
@@ -144,7 +144,7 @@
 						<span><em>已节省：</em><i>-¥20.00</i></span>
 					</div>
 					<div class="sumbtn">
-						<a class="sum-btn" href="/order/getOrderInfo.html" target="_blank">结算</a>
+						<a class="sum-btn" ng-click="addToSelecteCart()" href="javascript:;" target="_blank">结算</a>
 					</div>
 				</div>
 			</div>
