--- a/pinyougou-web/pinyougou-manager-web/src/main/webapp/login.html
+++ b/pinyougou-web/pinyougou-manager-web/src/main/webapp/login.html
@@ -36,7 +36,7 @@
 						<img src="../img/wx_cz.jpg" />
 					</div>
 					<div id="profile" class="tab-pane  active">
-						<form action="/login" method="post" class="sui-form">
+						<form action="/user/login" method="post" class="sui-form">
 							<div class="input-prepend">
 								<span class="add-on loginname"></span>
 								<input type="text" name="username"
@@ -49,7 +49,7 @@
 							</div>
 							<div class="setting">
 
-								验证码：<input type="text"/><img src="/img/ali.png"/>
+								验证码：<input type="text" name="code"/><img src="vcode" id="vcode"  style="cursor: pointer" title="看不清，点击刷新"/>
 
 							</div>
 							<div class="logined">
@@ -93,13 +93,18 @@
 	<script>
 		$(function(){
 			var slider = new SliderUnlock("#slider",{
-					successLabelTip : "欢迎访问品优购"	
+					successLabelTip : "欢迎访问品优购"
 				},function(){
 					// alert("验证成功,即将跳转至首页");
 	            	// window.location.href="index.html"
 	        	});
 	        slider.init();
 		})
+
+        document.getElementById("vcode").onclick = function () {
+            //重新读取服务器img中src图片，如果参数不同，浏览器会去访问服务器
+            this.src = "vcode?t=" + new Date().getTime();
+        }
 	</script>
 </body>
 </html>
