--- a/pinyougou-web/pinyougou-user-web/src/main/webapp/home-index.html
+++ b/pinyougou-web/pinyougou-user-web/src/main/webapp/home-index.html
@@ -14,7 +14,7 @@
 </head>
 <body ng-app="pinyougou"
       ng-controller="indexController"
-      ng-init="loadUsername();">
+      ng-init="loadUsername();search();">
     <!-- 头部栏位 -->
     <!--页面顶部-->
 <div id="nav-bottom">
@@ -208,56 +208,58 @@ $(function(){
                                 <div class="choose-order">
                                     <div class="sui-pagination pagination-large top-pages">
                                         <ul>
-                                            <li class="prev disabled"><a href="#">上一页</a></li>
+                                            <li class="prev {{searchEntity.page == 1 ? 'disabled':''}}"><a href="javacript:;" ng-click="pageSearch(searchEntity.page-1)">上一页</a></li>
 
-                                            <li class="next"><a href="#">下一页</a></li>
+                                            <li class="next {{searchEntity.page == pageResult.total ? 'disabled':''}}"><a href="javacript:;" ng-click="pageSearch(searchEntity.page+1)">下一页</a></li>
                                         </ul>
                                     </div>
                                 </div>
 
+                                <div ng-repeat="order in pageResult.rows">
 								<!--order1-->
                                 <div class="choose-title">
                                     <label data-toggle="checkbox" class="checkbox-pretty ">
-                                           <input type="checkbox" checked="checked"><span>2017-02-11 11:59　订单编号：7867473872181848  店铺：哇哈哈 <a>和我联系</a></span>
+                                           <input type="checkbox" checked="checked"><span>{{order.createTime | date:'yyyy-MM-dd HH:mm'}}　订单编号：{{toBigInt(order.orderId)}}  店铺：{{order.sellerNickName}} <a>和我联系</a></span>
                                      </label>
 									  <a class="sui-btn btn-info share-btn">分享</a>
                                 </div>
                                 <table class="sui-table table-bordered order-datatable">
                                     <tbody>
-                                        <tr>
+                                        <tr ng-repeat="orderItem in order.orderItems">
                                             <td width="35%">
-                                                <div class="typographic"><img src="img/goods.png" />
-                                                    <a href="#" class="block-text">包邮 正品玛姬儿压缩面膜无纺布纸膜100粒 送泡瓶面膜刷喷瓶 新款</a>
-                                                    <span class="guige">规格：温泉喷雾150ml</span>
+                                                <div class="typographic"><img src="{{orderItem.picPath}}" width="80" height="80"/>
+                                                    <a href="#" class="block-text">{{orderItem.title}}</a>
+
+                                                    <span class="guige">规格：{{orderItem.spec}}</span>
                                                 </div>
                                             </td>
                                             <td width="5%" class="center">
                                                 <ul class="unstyled">
-                                                    <li class="o-price">¥599.00</li>
-                                                    <li>¥299.00</li>
+                                                    <li class="o-price">¥{{orderItem.price}}</li>
+                                                    <li>¥{{orderItem.price}}</li>
                                                 </ul>
                                             </td>
-                                            <td width="5%" class="center">1</td>
+                                            <td width="5%" class="center">{{orderItem.num}}</td>
                                             <td width="8%" class="center">
                                                
                                             </td>
-                                            <td width="10%" class="center" >
-                                                <ul class="unstyled">
-                                                    <li>¥299.00</li>
-                                                    <li>（含运费：￥0.00）</li>
+                                            <td width="10%" class="center" ng-if="$index == 0" rowspan="{{order.orderItems.length}}">
+                                                <ul class="unstyled" >
+                                                    <li>¥{{order.payment.toFixed(2)}}</li>
+                                                    <li>（含运费：￥{{order.postFee}}）</li>
                                                 </ul>
                                             </td>
-                                            <td width="10%" class="center">
+                                            <td width="10%" class="center" ng-if="$index == 0" rowspan="{{order.orderItems.length}}">
                                                 <ul class="unstyled">
-                                                    <li>等待卖家付款</li>
+                                                    <li>{{statusArr[order.status-1]}}</li>
                                                     <li><a href="orderDetail.html" class="btn">订单详情 </a></li>
                                                 </ul>
                                             </td>
-                                            <td width="10%" class="center">
+                                            <td width="10%" class="center" ng-if="$index == 0" rowspan="{{order.orderItems.length}}">
                                                 <ul class="unstyled">
-													<li><a href="#" class="sui-btn btn-info">立即付款</a></li>
+													<li><a  ng-click="toPayment(toBigInt(order.orderId));" class="sui-btn btn-info" ng-if="order.status == 1">立即付款</a></li>
+													<li><a href="#" class="sui-btn btn-info" ng-if="order.status == 2">提醒发货</a></li>
                                                     <li>取消订单</li>
-                                                    
                                                 </ul>
                                             </td>
                                         </tr>
@@ -265,149 +267,21 @@ $(function(){
 
                                     </tbody>
                                 </table>
-                                <!--order2-->
-                                <div class="choose-title">
-                                    <label data-toggle="checkbox" class="checkbox-pretty ">
-                                           <input type="checkbox" checked="checked"><span>2017-02-11 11:59　订单编号：7867473872181848  店铺：哇哈哈 <a>和我联系</a></span>
-                                     </label>
-									  <a class="sui-btn btn-info share-btn">分享</a>
                                 </div>
-                                <table class="sui-table table-bordered order-datatable">
-                                    <tbody>
-                                        <tr>
-                                            <td width="35%">
-                                                <div class="typographic"><img src="img/goods.png" />
-                                                    <a href="#" class="block-text">包邮 正品玛姬儿压缩面膜无纺布纸膜100粒 送泡瓶面膜刷喷瓶 新款</a>
-                                                    <span class="guige">规格：温泉喷雾150ml</span>
-                                                </div>
-                                            </td>
-                                            <td width="5%" class="center">
-                                                <ul class="unstyled">
-                                                    <li class="o-price">¥599.00</li>
-                                                    <li>¥299.00</li>
-                                                </ul>
-                                            </td>
-                                            <td width="5%" class="center">1</td>
-                                            <td width="8%" class="center">
-                                                <ul class="unstyled">
-                                                    <li>已发货</li>
-                                                    <li><a>退货/退款</a></li>
-                                                </ul>
-                                            </td>
-                                            <td width="10%" class="center" rowspan="2">
-                                                <ul class="unstyled">
-                                                    <li>¥299.00</li>
-                                                    <li>（含运费：￥0.00）</li>
-                                                </ul>
-                                            </td>
-                                            <td width="10%" class="center" rowspan="2">
-                                                <ul class="unstyled">
-                                                    <li>部分发货</li>
-                                                    <li><a href="orderDetail.html" class="btn">订单详情 </a></li>
-                                                </ul>
-                                            </td>
-                                            <td width="10%" class="center" rowspan="2">
-                                                <ul class="unstyled">
-                                                    <li>还剩4天23时</li>
-                                                    <li><a href="#" class="sui-btn btn-info">确认发货</a></li>
-                                                </ul>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td width="35%">
-                                                <div class="typographic"><img src="img/goods.png" />
-                                                    <a href="#" class="block-text">包邮 正品玛姬儿压缩面膜无纺布纸膜100粒 送泡瓶面膜刷喷瓶 新款</a>
-                                                    <span class="guige">规格：温泉喷雾150ml</span>
-                                                </div>
-                                            </td>
-                                            <td width="5%" class="center">
-                                                <ul class="unstyled">
-                                                    <li class="o-price">¥199.00</li>
-                                                    <li>¥212.00</li>
-                                                </ul>
-                                            </td>
-                                            <td width="5%" class="center">1</td>
-                                            <td width="8%" class="center">
-                                                <ul class="unstyled">
-                                                    <li>未发货</li>
-                                                    <li><a>退货/退款</a></li>
-                                                </ul>
-                                            </td>
-
-
-                                        </tr>
-
-                                    </tbody>
-                                </table>
-
-                                <!--order3-->
-                                <div class="choose-title">
-                                    <label data-toggle="checkbox" class="checkbox-pretty ">
-                                           <input type="checkbox" checked="checked"><span>2017-02-11 11:59　订单编号：7867473872181848  店铺：哇哈哈 <a>和我联系</a></span>
-                                     </label>
-                                    <a class="sui-btn btn-info share-btn">分享</a>
-                                </div>
-                                <table class="sui-table table-bordered order-datatable">
-                                    <tbody>
-                                        <tr>
-                                            <td width="35%">
-                                                <div class="typographic"><img src="img/goods.png" />
-                                                    <a href="#" class="block-text">包邮 正品玛姬儿压缩面膜无纺布纸膜100粒 送泡瓶面膜刷喷瓶 新款</a>
-                                                    <span class="guige">规格：温泉喷雾150ml</span>
-                                                </div>
-                                            </td>
-                                            <td width="5%" class="center">
-                                                <ul class="unstyled">
-                                                    <li class="o-price">¥599.00</li>
-                                                    <li>¥299.00</li>
-                                                </ul>
-                                            </td>
-                                            <td width="5%" class="center">1</td>
-                                            <td width="8%" class="center">
-                                                <ul class="unstyled">
-
-                                                    <li><a>退货/退款</a></li>
-                                                </ul>
-                                            </td>
-                                            <td width="10%" class="center">
-                                                <ul class="unstyled">
-                                                    <li>¥299.00</li>
-                                                    <li>（含运费：￥0.00）</li>
-                                                </ul>
-                                            </td>
-                                            <td width="10%" class="center">
-                                                <ul class="unstyled">
-                                                    <li>买家已付款</li>
-                                                    <li><a href="orderDetail.html" class="btn">订单详情 </a></li>
-                                                </ul>
-                                            </td>
-                                            <td width="10%" class="center">
-                                                <ul class="unstyled">
-                                                    <li><a href="#" class="sui-btn btn-info">提醒发货</a></li>
-                                                </ul>
-                                            </td>
-                                        </tr>
-
-
-                                    </tbody>
-                                </table>
-
-
 
                             </div>
                             <div class="choose-order">
                                 <div class="sui-pagination pagination-large top-pages">
                                     <ul>
-                                        <li class="prev disabled"><a href="#">«上一页</a></li>
-                                        <li class="active"><a href="#">1</a></li>
-                                        <li><a href="#">2</a></li>
-                                        <li><a href="#">3</a></li>
-                                        <li class="dotted"><span>...</span></li>
-                                        <li class="next"><a href="#">下一页»</a></li>
+                                        <li class="prev {{searchEntity.page == 1 ? 'disabled':''}}"><a href="javacript:;" ng-click="pageSearch(searchEntity.page-1)">«上一页</a></li>
+                                        <li class="dotted" ng-if="firstDot"><span>...</span></li>
+                                        <li class="{{searchEntity.page == p ? 'active':''}}" ng-repeat="p in pageNums"><a href="javacript:;" ng-click="pageSearch(p);">{{p}}</a></li>
+                                        <li class="dotted" ng-if="lastDot"><span>...</span></li>
+                                        <li class="next {{searchEntity.page == pageResult.total ? 'disabled':''}}"><a href="javacript:;" ng-click="pageSearch(searchEntity.page+1)">下一页»</a></li>
                                     </ul>
-                                    <div><span>共10页&nbsp;</span><span>
+                                    <div><span>共{{pageResult.total}}页&nbsp;</span><span>
                                             到
-                                            <input type="text" class="page-num"><button class="page-confirm" onclick="alert(1)">确定</button>
+                                            <input type="text" class="page-num" ng-model="jumpPage"><button class="page-confirm" ng-click="pageSearch(jumpPage)">确定</button>
                                             页</span></div>
                                 </div>
                             </div>
